<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Registrarse">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvturista"
            style="@style/textosTitulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevousuarioturista"
            app:layout_constraintBottom_toTopOf="@+id/materialTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/materialTextField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084"
            app:mtf_image="@drawable/nombreapellido"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/etRNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/nombre"
                android:inputType="textAutoComplete"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/materialTextField7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialTextField"
            app:layout_constraintStart_toStartOf="@+id/materialTextField"
            app:layout_constraintTop_toBottomOf="@+id/materialTextField"
            app:layout_constraintVertical_bias="0.02"
            app:mtf_image="@drawable/nombreapellido"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/etRApellido1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/apellidos"
                android:inputType="textAutoComplete"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/materialTextField4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialTextField7"
            app:layout_constraintStart_toStartOf="@+id/materialTextField7"
            app:layout_constraintTop_toBottomOf="@+id/layoutCiudad"
            app:layout_constraintVertical_bias="0.02"
            app:mtf_image="@drawable/email"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/etREmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/materialTextField5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialTextField4"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/materialTextField4"
            app:layout_constraintTop_toBottomOf="@+id/materialTextField4"
            app:layout_constraintVertical_bias="0.02"
            app:mtf_image="@drawable/pswd"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/etRPswd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/materialTextField6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialTextField5"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/materialTextField5"
            app:layout_constraintTop_toBottomOf="@+id/materialTextField5"
            app:layout_constraintVertical_bias="0.02"
            app:mtf_image="@drawable/pswd"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/etRPswd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/confirmarcontrasena"
                android:inputType="textPassword"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <Button
            android:id="@+id/bRegistrarse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bordebotones"
            android:text="@string/registrase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialTextField6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/materialTextField6"
            app:layout_constraintTop_toBottomOf="@+id/materialTextField6"
            app:layout_constraintVertical_bias="0.268" />

        <LinearLayout
            android:id="@+id/layoutCiudad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialTextField7"
            app:layout_constraintStart_toStartOf="@+id/materialTextField7"
            app:layout_constraintTop_toBottomOf="@+id/materialTextField7"
            app:layout_constraintVertical_bias="0.02">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/textos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/provincia" />

                <Spinner
                    android:id="@+id/spProvincia"
                    style="@style/textos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/textos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ciudad" />

                <Spinner
                    android:id="@+id/spCiudad"
                    style="@style/textos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>